# surface_arpes

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  code_format.sh
doc/: model.tex
example/: accum1.txt  accum2.txt  depl.txt
plot/: plot_all.sh  plot_all_small.sh  plot_e_kz.sh  plot_kx_e.sh  plot_kx_e_small.sh  plot_kx_kz.sh
src/: arpes.cpp  classical_density_predictor.hpp  convolution.hpp  fft.hpp  params.hpp  poisson_solver.hpp  poisson_solver_base.hpp  poisson_system.hpp  quantum_density_predictor.hpp  read_input.hpp  schrodinger_solver.hpp  schrodinger_solver_base.hpp  schrodinger_system.hpp  simulator.cpp  simulator.hpp  tools.hpp
